# syntaxfmt

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  expand.rs
crates/syntaxfmt-macros/: # TODO.md  Cargo.toml  README.md  TODO.md  tests.md
crates/syntaxfmt-macros/src/: attributes.rs  components.rs  intermediate.rs  lib.rs
crates/syntaxfmt-macros/src/attributes/: args.rs  content.rs  context.rs  delims.rs  eval.rs  modal.rs  prefix_suffix.rs  pretty.rs  seps.rs  unverified_args.rs
crates/syntaxfmt-macros/src/components/: attributes.rs  content.rs  delims.rs  eval.rs  format.rs  indent.rs  modal.rs  none.rs  parse_basic.rs  parse_tokens.rs
crates/syntaxfmt-macros/tests/: basic.rs  integration.rs
examples/: comprehensive.rs
src/: lib.rs
