[package]
name = "syntaxfmt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A derive macro-based library for flexible syntax tree formatting with pretty printing support."
homepage = "https://github.com/jngls/syntaxfmt"
repository = "https://github.com/jngls/syntaxfmt"
documentation = "https://docs.rs/syntaxfmt"
readme = "README.md"
categories = ["development-tools", "text-processing"]
keywords = ["syntax", "formatting", "pretty-print", "ast", "derive"]

[workspace]
members = [
  "crates/*",
]

[features]
default = [
    "derive",
]
derive = [ "syntaxfmt-macros" ]

[dependencies]
syntaxfmt-macros = { version = "0.1.0", path = "crates/syntaxfmt-macros", optional = true }
