[package]
name = "syntaxfmt-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the syntaxfmt crate."
homepage = "https://github.com/jngls/syntaxfmt"
repository = "https://github.com/jngls/syntaxfmt"
documentation = "https://docs.rs/syntaxfmt"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["syntax", "formatting", "derive", "macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
syntaxfmt = { path = "../.." }

# [lints]
# workspace = true
